--- a/react-cdn-version.html
+++ b/react-cdn-version.html
@@ -14,27 +14,12 @@
 
 <body>
   <div id="root"></div>
-
   <script type="text/babel">
-    var Greetings = React.createClass({ render:function() { 
-      return (
+    var Greetings = React.createClass({ render:function() { return (
     <p>{this.props.message}</p>
-          )
-     } 
-    }); 
-
-setInterval (function(){
-  var message = ['messages test', 'hel' , 'Rajasekar'];
-  var randomms = message[Math.floor((Math.random()*3))];
-  ReactDOM.render(
-    <Greetings message = {randomms} />, document.getElementById('root') 
-    );
-
-    }, 2000);
-
-
-
-
+    ) } }); setInterval (function(){ var message = ['messages test', 'hel' , 'Rajasekar']; var randomms = message[Math.floor((Math.random()*3))];
+    ReactDOM.render(
+    <Greetings message={ randomms} />, document.getElementById('root') ); }, 2000);
   </script>
 </body>
 
